icon fix on mobile

--- a/src/styles/searchbar.scss
+++ b/src/styles/searchbar.scss
@@ -56,12 +56,12 @@
     .App{
         .searchBar{
             input{
-                font-size: .5rem;
+                font-size: .6rem;
             }
             .icon{
                 svg{
-                    width: 100%;
-                    height: 100%;
+                    width: 110%;
+                    height: 105%;
                     height: 3rem;
                 }
             }
